attempting to fix d3 graph overflow issue

--- a/templates/rune/assets.css
+++ b/templates/rune/assets.css
@@ -203,6 +203,13 @@ img {
 	line-height: 20px;
 }
 
+/* Graphs
+------------------------------------------------ */
+
+div.graph {
+	overflow-x: scroll;
+}
+
 /* Lists
 ------------------------------------------------ */
 
